--- a/SimpleAudioLib.csproj
+++ b/SimpleAudioLib.csproj
@@ -1,10 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <PackageId>CaptainCoder.SimpleAudio</PackageId>
+    <Version>0.0.1</Version>
+    <Authors>Joseph Collard</Authors>
+    <Company>Captain Coder LLC</Company>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/jcollard/SimpleAudioLib/</PackageProjectUrl>
+    <Description>
+      An incredibly simple Audio Library for playing audio in Console projects. This 
+      library is built on top of [NAudio](https://github.com/naudio/NAudio). It starts
+      a background thread which manages the disposal of audio automagically. 
+    </Description>
+    <Copyright>2022 Captain Coder LLC</Copyright>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="LICENSE.txt" Pack="true" PackagePath=""/>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="NAudio" Version="2.1.0" />
